# World-Cup-Events

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/processed/: attendance.csv  goals.csv  matches.csv  players.csv  players_teams.csv  squads.csv  stadiums.csv  tournaments.csv
notebooks/: 01_data_processing.ipynb  02_feature_engineering.ipynb  03_data_mining.ipynb
reports/figures/: attendance_distribution.html  attendance_distribution_by_tournament.html  golden_boot_winners_of_each_tournament.html  median_and_mean_attendance_by_tournament.html  median_goal_time_for_each_Tournament.html  minute_of_goal_and_stage_name.html  sum_of_late_goals_by_tournament.html  top_10_most_frequent_matches.html  top_12_players_in_all_versions.html  total_goals_for_each_tournament.html  total_goals_in_match_histogram.html
