[project]
name = "world-cup-event"
version = "0.1.0"
description = "Comprehensive data mining project focused on the FIFA World Cup events."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "nbformat>=4.2.0",
    "numpy==1.23.5",
    "pandas==1.5.3",
    "plotly==5.9.0",
    "scikit-learn==1.2.1",
    "scipy==1.10.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
